# forge-finance

./: .gitignore  ARCHITECTURE_DIAGRAM.txt  Anchor.toml  Cargo.toml  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DEPLOY_VERCEL_STEPS.md  Dockerfile  FOGO_DOMAIN_REGISTRATION.md  FOGO_SESSIONS_README.md  GITHUB_AUTH_SETUP.md  GITHUB_SETUP.md  INVESTOR_DEMO_README.md  PHANTOM_WALLET_INTEGRATION.md  README.md  SMART_CONTRACTS_ARCHITECTURE.md  VERCEL_DEPLOYMENT.md  VERCEL_DEPLOYMENT_STATUS.md  VERCEL_DEPLOY_NOW.md  demo  demo-simple.rs  demo.rs  next.config.dev.js  next.config.prod.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
app/: .env.production  next.config.dev.js  package-lock.json  package.json
docs/: DEPLOYMENT_STATUS.md  ctoken-lvf-integration.md  lending-lvf-architecture.md  mvp-pfogo-pusdc.md
migrations/: deploy_lending.ts  deploy_lvf.ts
programs/forge-core/: Cargo.toml
programs/forge-crucibles/: Cargo.toml
programs/forge-engineers/: Cargo.toml
programs/forge-engineers/src/: lib.rs
programs/forge-firewall/: Cargo.toml
programs/forge-firewall/src/: lib.rs
programs/forge-heat/: Cargo.toml
programs/forge-heat/src/: lib.rs
programs/forge-reactors/: Cargo.toml
programs/forge-reactors/src/: lib.rs
programs/forge-smelters/: Cargo.toml
programs/forge-smelters/src/: lib.rs
programs/forge-sparks/: Cargo.toml
programs/forge-sparks/src/: lib.rs
programs/lending/: Cargo.toml
programs/lending-pool/: Cargo.toml
programs/lvf/: Cargo.toml
scripts/: build-with-docker.sh  build-with-solana-docker.sh  deploy-complete-fogo.sh  deploy-comprehensive-mock.sh  deploy-fogo-complete.sh  deploy-fogo-functional.sh  deploy-fogo-mainnet.sh  deploy-fogo-mock.sh  deploy-fogo-realistic.sh  deploy-fogo-testnet.sh  deploy-frontend-only.sh  deploy-mainnet.sh  deploy-real-testnet.sh  deploy-real-wallet.sh  deploy-simple.sh  deploy-solana-testnet.sh  deploy-testnet.md  deploy-testnet.sh  deploy-to-vercel.sh  deploy.ts  index_events.ts  test-setup.ts  update-anchor-config.sh
sdk/: package-lock.json  package.json
sdk/src/: forge-sdk.ts  index.ts
src/components/: AnalyticsDashboard.tsx  BorrowModal.tsx  CTokenDepositModal.tsx  CTokenPortfolio.tsx  CTokenPriceChart.tsx  CTokenWithdrawModal.tsx  Chart.tsx  ClosePositionModal.tsx  CrucibleCreationModal.tsx  CrucibleManager.tsx  DemoClient.tsx  DepositModal.tsx  DevnetDepositModal.tsx  DynamicTokenBalances.tsx  FogoDepositModal.tsx  FogoIntegration.tsx  FogoSessions.tsx  FogoSessionsButton.tsx  FogoSessionsDemo.tsx  FogoWalletButton.tsx  FogoWithdrawModal.tsx  GovernancePanel.tsx  Header.tsx  LPPositionModal.tsx  LVFPositionCard.tsx  LVFPositionModal.tsx  LeverageControl.tsx  LeveragedProjectionChart.tsx  MarketCard.tsx  MobileNav.tsx  Notification.tsx  PhantomWalletButton.tsx  RealDepositModal.tsx  RealFogoDepositModal.tsx  RealFogoWithdrawModal.tsx  RealSolModal.tsx  RealTimeStats.tsx  RealTransactionModal.tsx  (+11 more)
tests/: forge-protocol.test.ts  pfogo-pusdc-mvp.test.ts
(+130 files in other folders)
