[workspace]
members = [
    "programs/forge-core",
    "programs/forge-crucibles",
    "programs/forge-sparks",
    "programs/forge-smelters",
    "programs/forge-heat",
    "programs/forge-reactors",
    "programs/forge-firewall",
    "programs/forge-engineers",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
