[package]
name = "forge-engineers"
version = "0.1.0"
description = "Forge Protocol Engineers - Vault creation and strategy deployment"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "forge_engineers"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.0"
anchor-spl = "0.32.0"
