[package]
name = "forge-firewall"
version = "0.1.0"
description = "Forge Protocol Firewall - Role-based security and access control"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "forge_firewall"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.0"
anchor-spl = "0.30.1"
