[package]
name = "forge-reactors"
version = "0.1.0"
description = "Forge Protocol Reactors - AMM-based swap engine between Crucible tokens"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "forge_reactors"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.0"
anchor-spl = "0.32.0"
