[package]
name = "forge-smelters"
version = "0.1.0"
description = "Forge Protocol Smelters - Minting and burning logic for Sparks"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "forge_smelters"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.0"
anchor-spl = "0.32.0"
