[package]
name = "forge-sparks"
version = "0.1.0"
description = "Forge Protocol Sparks - SPL-like token with governance extensions"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "forge_sparks"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.0"
anchor-spl = "0.32.0"
